# CHIP_8

./: CMakeLists.txt  README.md  main.cpp
helpers/: constants.hpp  fonts.h  type_aliases.hpp
include/: chip-8.hpp  chip8_instructions.hpp  chip8_opcode_dispatcher.hpp  platform.hpp
src/: chip-8.cpp  chip8_instructions.cpp  chip8_opcode_dispatcher.cpp
